--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,24 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Page title</title>
-    <link rel="stylesheet" href="./sass/index.scss" />
-    <script type="module" src="./index.js"></script>
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <include src="./partials/form.html"></include>
-    <include src="./partials/gallery.html"></include>
+    <header class="page-header">
+      <form class="search-form" id="search-form">
+        <input
+          class="input"
+          type="text"
+          name="searchQuery"
+          autocomplete="off"
+          placeholder="Search images..."
+        />
+        <button class="search-btn" type="submit"></button>
+      </form>
+    </header>
+    <main>
+      <div class="gallery"></div>
+    </main>
+    <script src="./js/index.js" type="module"></script>
   </body>
 </html>
