--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,7 @@
     </header>
     <main>
       <div class="gallery"></div>
+      <button type="button" class="load-more">Load more</button>
     </main>
     <script src="./js/index.js" type="module"></script>
   </body>
